<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@mipmap/background2"
    tools:context="com.example.flynn.myapplication2.MainActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="0.2"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/backBtn"
            android:background="@mipmap/back_btn"
            android:layout_weight="0"
            android:scaleType="center"
            android:textAlignment="center"
            android:layout_height="match_parent"
            android:layout_width="50dp"
            android:scaleY="0.35" />

        <TextView
            android:id="@+id/lblCreateRoom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/create_room_title"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:layout_weight="1"
            android:textColor="@android:color/black" />


        <ImageView
            android:id="@+id/settingBtn"
            android:layout_height="match_parent"
            android:background="@mipmap/setting_btn"
            android:layout_weight="0"
            android:scaleY="0.6"
            android:layout_width="35dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/roomNameLbl"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:text="@string/room_name"
                android:textStyle="normal|bold"
                android:textColor="@android:color/black"
                android:paddingEnd="30dp"
                android:gravity="center_vertical" />

            <EditText
                android:id="@+id/roomNameTxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/modeLbl"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:text="@string/mode"
                android:textStyle="normal|bold"
                android:textColor="@android:color/black"
                android:paddingEnd="30dp"
                android:gravity="center_vertical" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <RadioButton
                    android:layout_height="wrap_content"
                    android:text="@string/mode_easy"
                    android:onClick="onRadioButtonClicked"
                    android:layout_width="120dp" />

                <RadioButton
                    android:layout_height="wrap_content"
                    android:text="@string/mode_medium"
                    android:onClick="onRadioButtonClicked"
                    android:layout_width="120dp" />

                <RadioButton
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mode_hard"
                    android:onClick="onRadioButtonClicked"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/maxPlayersLbl"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:text="@string/max_player_number"
                android:textStyle="normal|bold"
                android:textColor="@android:color/black"
                android:paddingEnd="30dp"
                android:gravity="center_vertical" />

            <EditText
                android:id="@+id/maxPlayersTxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">

        <Button
            android:id="@+id/btnCreateRoom"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/ok_btn"
            android:textAlignment="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</LinearLayout>
