<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_waiting_room"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.flynn.myapplication2.WaitingRoomActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="0.2"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/backBtn"
            android:background="@mipmap/back_btn"
            android:layout_weight="0"
            android:scaleType="center"
            android:textAlignment="center"
            android:layout_height="match_parent"
            android:layout_width="50dp"
            android:scaleY="0.35" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblIdRoom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/id_room"
                android:textSize="16sp"
                android:textStyle="normal|bold"
                android:paddingLeft="10dp"
                android:layout_weight="0.8"
                android:textColor="@android:color/black"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/txtIdRoom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/id_room_demo"
                android:layout_weight="0.2"
                android:textColor="@android:color/black"
                android:paddingLeft="5dp"
                android:textSize="20sp"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblRoomName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/room"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="normal|bold"
                android:layout_weight="0.6"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txtRoomName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="@string/name_room_demo"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/settingBtn"
            android:layout_height="match_parent"
            android:background="@mipmap/setting_btn"
            android:layout_weight="0"
            android:scaleY="0.6"
            android:layout_width="35dp" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:id="@+id/columnId"
                android:text="@string/id"
                android:textColor="@android:color/black"/>
        </TableRow>




    </TableLayout>

</LinearLayout>
